main frame achieved

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -4,6 +4,7 @@
   <input type="text" name="title" /><br />
   Body：(use MarkDown to write)<br />
   <textarea name="post" rows="20" cols="100"></textarea><br />
-  <input type="submit" value="post" />
+  use "![](/images/yourfile)" to insert image to your blog.<br /><br />
+  <input type="submit" value="post" /> 
 </form>
 <%- include footer %>
