--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -4,6 +4,6 @@
   Password：    <input type="password" name="password"/><br />
   Password confirm：<input type="password" name="password-repeat"/><br />
   EmailAdd：    <input type="email" name="email"/><br />
-           <input type="submit" value="注册"/>
+           <input type="submit" value="Register"/>
 </form>
 <%- include footer %>
